[package]
edition = "2024"
name = "assert-or-bless"
version = "0.1.0"
description = "Assert that a multi-line string equals the contents of a blessable snapshot file. Print a nice colored diff if not."
homepage = "https://github.com/Enselic/assert-or-bless"
documentation = "https://docs.rs/assert-or-bless"
readme = "README.md"
keywords = ["assert", "bless", "snapshot", "testing"]
license = "MIT"
repository = "https://github.com/Enselic/assert-or-bless"

[dependencies.similar-asserts]
version = "1.7.0"
default-features = false

[dev-dependencies]
# We could use the tempfile crate instead of creating a random directory
# ourselves, but the Cargo.lock file becomes significantly shorter if we do it
# ourselves.
fastrand = "2.3.0"
