[package]
edition = "2024"
name = "assert-or-bless"
version = "0.1.0"
description = "Assert that a multi-line string equals the contents of a blessable snapshot file. Print a nice colored diff if not."
homepage = "https://github.com/Enselic/assert-or-bless"
documentation = "https://docs.rs/assert-or-bless"
readme = "README.md"
keywords = ["assert", "bless", "snapshot", "testing"]
license = "MIT"
repository = "https://github.com/cargo-public-api/cargo-public-api/tree/main/public-api"

[dependencies.similar-asserts]
version = "1.7.0"
default-features = false

[dev-dependencies]
fastrand = "2.3.0"
